crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/snapshots/generate_and_diff_resource_pots-11.snap
---
source: crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/test_generate_and_diff_resource_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: A_66be
id: A_66be
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
)
module_groups: [
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
]
modules: [
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
    ModuleId {
        relative_path: "C",
        query_string: "",
    },
]
resources: []

-------

name: B_2f5d
id: B_2f5d
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
)
module_groups: [
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
]
modules: [
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
    ModuleId {
        relative_path: "E",
        query_string: "",
    },
]
resources: []
