crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/snapshots/generate_and_diff_resource_pots-2.snap
---
source: crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/test_generate_and_diff_resource_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
[
    GroupResourcePotsSnapshotItem {
        id: ModuleGroupId(
            "A_Entry",
        ),
        resource_pots: {
            "A_66be",
        },
    },
    GroupResourcePotsSnapshotItem {
        id: ModuleGroupId(
            "B_Entry",
        ),
        resource_pots: {
            "test___farm_unknown",
            "test_js",
            "B_3f39",
            "B_2f5d",
        },
    },
    GroupResourcePotsSnapshotItem {
        id: ModuleGroupId(
            "D_DynamicImport",
        ),
        resource_pots: {
            "B_3f39",
        },
    },
    GroupResourcePotsSnapshotItem {
        id: ModuleGroupId(
            "F_DynamicImport",
        ),
        resource_pots: {
            "test_js",
        },
    },
    GroupResourcePotsSnapshotItem {
        id: ModuleGroupId(
            "I_DynamicEntry",
        ),
        resource_pots: {
            "EI_dynamic_entry_js",
        },
    },
]
