crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/snapshots/generate_and_diff_resource_pots-3.snap
---
source: crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/test_generate_and_diff_resource_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
[
    "B_2f5d",
    "B_3f39",
    "test_custom(\"__farm_unknown\")",
    "test_js",
]
