crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/snapshots/generate_and_diff_resource_pots-7.snap
---
source: crates/compiler/src/update/regenerate_resources/generate_and_diff_resource_pots/test_generate_and_diff_resource_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
name: A
id: A_66be
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
)
module_groups: [
    ModuleGroupId(
        "A_Entry",
    ),
]
modules: [
    ModuleId {
        relative_path: "A",
        query_string: "",
    },
    ModuleId {
        relative_path: "C",
        query_string: "",
    },
]
resources: []

-------

name: B
id: B_2f5d
immutable: false
resource_pot_type: Js
entry: Some(
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
)
module_groups: [
    ModuleGroupId(
        "B_Entry",
    ),
]
modules: [
    ModuleId {
        relative_path: "B",
        query_string: "",
    },
    ModuleId {
        relative_path: "E",
        query_string: "",
    },
]
resources: []

-------

name: B
id: B_3f39
immutable: false
resource_pot_type: Js
entry: None
module_groups: [
    ModuleGroupId(
        "B_Entry",
    ),
    ModuleGroupId(
        "D_DynamicImport",
    ),
]
modules: [
    ModuleId {
        relative_path: "D",
        query_string: "",
    },
]
resources: []

-------

name: EI
id: EI_dynamic_entry_js
immutable: false
resource_pot_type: DynamicEntryJs
entry: Some(
    ModuleId {
        relative_path: "I",
        query_string: "",
    },
)
module_groups: [
    ModuleGroupId(
        "I_DynamicEntry",
    ),
]
modules: [
    ModuleId {
        relative_path: "F",
        query_string: "",
    },
    ModuleId {
        relative_path: "I",
        query_string: "",
    },
]
resources: []
